2012-03-13  6.7.6-1 Cristy  <quetzlzacatenango@image...>
  * Use uint32 pointer for ReadStripMethod in coders/tiff.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20526).
  * Ghostscript 32/64 bit detection patch (contributed by
    axeld@pinc-...).
  * Honor center gravity for caption: with Pango support (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20517).
  * Add support for pango: coder to render captions with Pango.

2012-03-10  6.7.6-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-0, SVN revision 7090.

2012-03-06  6.7.6-0 Cristy  <quetzlzacatenango@image...>
  * Importing from the X11 root windows no longer leaks memory (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20470).
  * Check to see if delegate file exists before copying.

2012-03-05  6.7.5-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-10, SVN revision 7056.

2012-03-05  6.7.5-10 Cristy  <quetzlzacatenango@image...>
  * Fix too many arguments to AnnotateImage() (copy/paste bug).

2012-03-02  6.7.5-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-9, SVN revision 7046.

2012-02-29  6.7.5-9 Cristy  <quetzlzacatenango@image...>
  * Caption no longer includes the prefix "caption:" in the rendered text.
  * Auto scale pointsize for -size 100x100 caption:

2012-03-02  6.7.5-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-8, SVN revision 7027.

2012-03-02  6.7.5-8 Glenn Randers-Pehrson <glennrp@image...>
  * non-verbose identify now reports DirectClass for transparent PNG images 
    to agree with the report by identify -verbose.  (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20448 and
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=15482).

2012-02-29  6.7.5-8 Cristy  <quetzlzacatenango@image...>
  * Support infinite caption lengths.
  * Permit custome JPEG quantization tables (e.g.